# logit-lens

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: example.ipynb  example.py
src/logit_lens/: __init__.py  hook.py  logit_lens.py  model_with_aliases.py  typing.py  visualizers.py
src/logit_lens/models/: __init__.py  gpt2.py
